# Exam-System

./: ExamSystem  credentials
docroot/sites/all/modules/admin_readability/: admin_readability.css  admin_readability.info
docroot/sites/all/modules/popup_field_group/: popup_field_group.info  popup_field_group.module
docroot/sites/all/modules/vscc/: vscc.info
docroot/sites/all/modules/vscc/theme/: vscc_controls.tpl.php
docroot/sites/all/modules/vscc/vsccnewskin/: vsccnewskin.info
docroot/sites/all/themes/SWhite/: swhite.info  template.php
docroot/sites/all/themes/SWhite/css/: bbg.jpg~  style.css
docroot/sites/all/themes/SWhite/templates/: page.tpl.php
docroot/sites/all/themes/beginning/: beginning.info  template.php
docroot/sites/all/themes/beginning/templates/: html.tpl.php
emdbrowser/build-emdbrowser-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  emdbrowser  rules.ninja
emdbrowser/build-emdbrowser-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-58dcc7a6b744a5953982.json  (+5 more)
emdbrowser/build-emdbrowser-Desktop-Debug/emdbrowser_autogen/: moc_predefs.h
emdbrowser/build-emdbrowser-Desktop-Debug/emdbrowser_autogen/EWIEGA46WW/: qrc_qml.cpp
emdbrowser/build-emdbrowser-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  emdbrowser.cbp
emdbrowser/build-emdbrowser-Desktop-Default/emdbrowser_autogen/: moc_predefs.h
emdbrowser/build-emdbrowser-Desktop-Default/emdbrowser_autogen/EWIEGA46WW/: qrc_qml.cpp
emdbrowser/emdbrowser/: CMakeLists.txt  CMakeLists.txt.user.fa427fa.22  main.qml
